--- a/robot_portrait/my-project/site/GA/index.html
+++ b/robot_portrait/my-project/site/GA/index.html
@@ -83,10 +83,40 @@
 <h2 id="functions">Functions</h2>
 <ul>
 <li><code>createPop</code> - Create a population taking 9 random faces from the database.</li>
+</ul>
+<p>Takes as parameters:</p>
+<pre><code>- encodedVectors (numpy.array) : Numpy array of vectors corresponding to the encoded pictures from the database
+- X_test(numpy.array) : Numpy array of the pictures of the testing part
+</code></pre>
+<p>Returns:</p>
+<pre><code>- population (numpy.array): Numpy array of the 9 random vectors that are will be displayed to the witness for the first choice
+</code></pre>
+<ul>
 <li><code>crossingOver</code> - Take the 3 first choosen pictures and merge the top of one of them with the bottom of the other one.</li>
+</ul>
+<p>Takes as parameters:</p>
+<pre><code>- population (numpy.array) : Numpy array of vectors corresponding to the pictures that the witness chose
+</code></pre>
+<p>Returns:</p>
+<pre><code>- new_pop (numpy.array): Numpy array of the 6 vectors that are created by crossing the 3 first vectors of the population
+</code></pre>
+<ul>
 <li><code>mutationFunction</code> - Mutate the choosen pictures in a range.</li>
+</ul>
+<p>Takes as parameters:</p>
+<pre><code>- population (numpy.array) : Numpy array of vectors corresponding to the pictures that the witness chose
+</code></pre>
+<p>Returns:</p>
+<pre><code>- popToMutate (numpy.array): Numpy array of vectors who may have undergone a mutation
+</code></pre>
+<ul>
 <li><code>completePop</code> - Using the crossed and mutated pictures, generate a new population with if needed pictures from the databse.</li>
 </ul>
+<p>Takes as parameters:</p>
+<pre><code>- population (numpy.array) : Numpy array of vectors corresponding to the pictures that the witness chose
+</code></pre>
+<p>Returns:
+    - populationToBeShown (numpy.array): Numpy array of "children" vectors that can be either crossed from the parents, mutated or taken from the database</p>
               
             </div>
           </div><footer>
